<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio4a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_hoja4.Ejercicio4a">

    <TextView
        android:text="@string/textViewEj3UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView1Ej4a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView1Ej4a"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/editText1Ej4a"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <Button
        android:text="@string/ButtonEj3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1Ej4a"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/button1Ej4a"
        android:onClick="setName" />
</RelativeLayout>
