<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio4b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_hoja4.Ejercicio4b">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp" >

    </RadioGroup>

    <RadioButton
        android:text="@string/radioLowerCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton1Ej4b"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:onClick="setData"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/radioUpperCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton1Ej4b"
        android:layout_marginTop="16dp"
        android:onClick="setData"
        android:id="@+id/radioButton2Ej4b" />

    <RadioButton
        android:text="@string/radioReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/radioButton3Ej4b"
        android:layout_below="@+id/radioButton2Ej4b"
        android:layout_alignParentStart="true"
        android:onClick="setData" />

</RelativeLayout>
